--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
-    "name": "kudobot",
-    "version": "1.0.0",
-    "description": "Bot Builder v4 echo bot sample",
-    "author": "Microsoft",
-    "license": "MIT",
-    "main": "./lib/index.js",
-    "scripts": {
-        "build": "tsc --build",
-        "lint": "tslint -c tslint.json 'src/**/*.ts'",
-        "postinstall": "npm run build && node ./deploymentScripts/webConfigPrep.js",
-        "start": "tsc --build && node ./lib/index.js",
-        "test": "jest",
-        "test-watch": "jest --watchAll",
-        "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com"
-    },
-    "dependencies": {
-        "botbuilder": "~4.9.1",
-        "dotenv": "^8.2.0",
-        "fs": "0.0.1-security",
-        "replace": "~1.1.1",
-        "restify": "~8.5.1"
-    },
-    "devDependencies": {
-        "@types/dotenv": "6.1.1",
-        "@types/jest": "^26.0.10",
-        "@types/restify": "8.4.2",
-        "jest": "^26.4.2",
-        "nodemon": "~2.0.4",
-        "ts-jest": "^26.2.0",
-        "tslint": "~6.1.2",
-        "typescript": "~3.9.2"
+  "name": "kudobot",
+  "version": "1.0.0",
+  "description": "Bot Builder v4 echo bot sample",
+  "author": "Microsoft",
+  "license": "MIT",
+  "main": "./lib/index.js",
+  "scripts": {
+    "build": "tsc --build",
+    "postinstall": "npm run build && node ./deploymentScripts/webConfigPrep.js",
+    "start": "tsc --build && node ./lib/index.js",
+    "test": "jest",
+    "test-watch": "jest --watchAll",
+    "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com"
+  },
+  "dependencies": {
+    "botbuilder": "~4.9.1",
+    "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
+    "replace": "~1.1.1",
+    "restify": "~8.5.1"
+  },
+  "devDependencies": {
+    "@types/dotenv": "6.1.1",
+    "@types/jest": "^26.0.10",
+    "@types/restify": "8.4.2",
+    "husky": "^4.2.5",
+    "jest": "^26.4.2",
+    "nodemon": "~2.0.4",
+    "prettier": "2.1.1",
+    "pretty-quick": "^3.0.0",
+    "ts-jest": "^26.2.0",
+    "typescript": "~3.9.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
     }
+  }
 }
