Revert "chore: removed junk from jest.config"
This reverts commit 552af00aea7b7dc270e71752d947407fc5b47101.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "build": "tsc --build",
-    "postinstall": "npm run build && node ./deploymentScripts/webConfigPrep.js",
+    "postinstall": "npm run build",
     "start": "tsc --build && node ./lib/index.js",
     "test": "jest --collect-coverage",
     "test-watch": "jest --watchAll",
