--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -53,7 +53,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: my-ecr-repo
+        ECR_REPOSITORY: kudobot
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
@@ -68,13 +68,13 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
-        container-name: sample-app
+        container-name: kudobot-server
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: kudobot-service
+        service: kudobot-server
         cluster: default
         wait-for-service-stability: true
